--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
 
-  build-linux:
+  build-linux-gcc:
 
     runs-on: ubuntu-latest
 
@@ -26,6 +26,33 @@ jobs:
       run: |
         export CC=$(which gcc-9)
         export CXX=$(which g++-9)
+        mkdir -p build && cd build && make test-sdsl
+
+  build-linux-clang:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: checkout submodules
+      run: git submodule update --init --recursive
+
+    - name: Set up Clang
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: latest
+        platform: x64
+
+    - name: install sdsl-lite
+      run: |
+        export CC=$(which clang)
+        export CXX=$(which clang++)
+        ./install.sh $(pwd)
+    - name: test sdsl-lite
+      run: |
+        export CC=$(which clang)
+        export CXX=$(which clang++)
         mkdir -p build && cd build && make test-sdsl
 
   build-macos:
