updated links for faust.txt and moby.int and removed zarathustra.txt

--- a/test/download.config
+++ b/test/download.config
@@ -1,4 +1,4 @@
 # [TC_PATH];[TC_DOWNLOAD_URL]
-faust.txt;http://algo2.iti.kit.edu/gog/sdsl/faust.txt.tar.gz
-zarathustra.txt;http://algo2.iti.kit.edu/gog/sdsl/zarathustra.txt.tar.gz
-moby.int;http://algo2.iti.kit.edu/gog/sdsl/moby.int.tar.gz
+faust.txt;https://github.com/xxsds/sdsl-lite/raw/refs/heads/master/test/test_cases/faust.txt.tar.gz
+#zarathustra.txt;http://algo2.iti.kit.edu/gog/sdsl/zarathustra.txt.tar.gz
+moby.int;https://github.com/xxsds/sdsl-lite/raw/refs/heads/master/test/test_cases/moby.int.tar.gz
